# technical_support

./: .gitignore  config.py  pyproject.toml  technical_support.py
app/: __init__.py  errors.py  forms.py  mail.py  models.py  routes.py
app/templates/: 401.html  403.html  404.html  500.html  accept_request.html  appeal.html  appeal_list.html  base.html  create_request.html  index.html  statistics.html
migrations/versions/: 4acf9823467e_.py  cf330b10b101_.py
openproject/database/: request.py  work_packages.py
